[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/bg_white.png" type="Texture" id=1]
[ext_resource path="res://src/gui.gd" type="Script" id=2]
[ext_resource path="res://src/gui/GUIFactory.gd" type="Script" id=3]
[ext_resource path="res://assets/cat.PNG" type="Texture" id=4]

[node name="main" type="Node"]

[node name="bg" type="Sprite" parent="."]
position = Vector2( 80, 60 )
texture = ExtResource( 1 )

[node name="gui" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="gui_factory" type="Node" parent="gui"]
script = ExtResource( 3 )

[node name="content" type="MarginContainer" parent="gui"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -5.0

[node name="content_v" type="VBoxContainer" parent="gui/content"]
margin_right = 140.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="dynamic_content" type="MarginContainer" parent="gui/content/content_v"]
margin_right = 140.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )

[node name="cat" type="Sprite" parent="gui/content/content_v/dynamic_content"]
position = Vector2( 70, 35 )
texture = ExtResource( 4 )
